<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".ui.converter.ConverterActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/currency_converter"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/fromToContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/fromToContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/convertBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTV">

        <LinearLayout
            android:id="@+id/fromContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/pick_from"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0.1dp"
                android:background="@color/white"
                android:gravity="center">

                <Spinner
                    android:id="@+id/fromSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:tag="from"
                    android:layout_toStartOf="@+id/view1"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@+id/view1" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_centerInParent="true"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/fromET"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/view1"
                    android:hint="@string/amount"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/view1" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/toContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/pick_to"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0.1dp"
                android:background="@color/white"
                android:gravity="center">

                <Spinner
                    android:id="@+id/toSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toStartOf="@+id/view2"
                    android:tag="to"
                    android:layout_toLeftOf="@+id/view2" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_centerInParent="true"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/convertResultTV"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_toEndOf="@+id/view2"
                    android:gravity="center_vertical"
                    android:hint="@string/result"
                    android:textColor="@color/green"
                    android:layout_toRightOf="@+id/view2" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/convertBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromToContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>